workloads/termix/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: termix
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: termix
  template:
    metadata:
      labels:
        app: termix
    spec:
      containers:
        - name: termix
          image: ghcr.io/lukegus/termix:latest
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /app/data
        - name: guacd
          image: guacamole/guacd:1.6.0
          ports:
            - name: guacd
              containerPort: 4822
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: termix-pvc
