workloads/termix/service.yml
apiVersion: v1
kind: Service
metadata:
  name: termix-service
spec:
  selector:
    app: termix
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
